Fix chat box color on iOS dark mode

--- a/src/app/components/chat-box/chat-box.component.scss
+++ b/src/app/components/chat-box/chat-box.component.scss
@@ -51,6 +51,7 @@
     transition: .2s all ease-in-out;
     padding: 8px;
     color: #000;
+    background: #fff;
     font-size: 14px;
     cursor: pointer;
 
